Added support for custom prototype annotations